2007-07-04  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/devices/network-wired.* : restyling.
	* scalable/devices/network-wired.svg : new icon
	* face-monkey tweaks.
	* {22x22,32x32}/status/audio-volume-muted: tweaks.

2007-07-03  Lapo Calamandrei <calamandrei@gmail.com>

	* */status/task-passed-due.* : removed the grey X.
	* {32x32,scalable}/status/audio-volume-* : new icons made in
		cooperation with Ulisse.
	* */emotes/face-monkey.* : great icon by Ulisse.

2007-07-02  Andreas Nilsson <nisses.mail@home.se>

	* {32x32,scalable}/actions/mail-reply-sender: added missing sizes.

2007-07-02  Jakub Steiner <jimmac@ximian.com>

	* camera-video: new device icon.

2007-07-02  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/apps/system-software-update.* : new icons.

2007-07-01  Lapo Calamandrei <calamandrei@gmail.com>

	* 32x32/apps/accessories-dictionary.* : missing size added (Ulisse).
	* 24x24/status/weather-* : updated to reflect 22x22 ones.
	* */mimetypes/image-x-generic.* : new icon using the printed photo
		metaphore as in t-i-t.
	* */actions/edit-clear.* : new icons by Ulisse.

2007-06-30  Lapo Calamandrei <calamandrei@gmail.com>

	* 32x32/devices/scanner.* : missing size added.

2007-06-29  Lapo Calamandrei <calamandrei@gmail.com>
	
	* switched wrongly placed emblem-unreadable 32x32 and scalable.
	* */mimetypes/x-office-calendar.* : new design.

2007-06-29  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/x-office-calendar.png: update this size as
		well. FIxes bug #452021

2007-06-28  Andreas Nilsson <nisses.mail@home.se>

	* {22x22,32x32,scalable}/status/weather-fog.* : added missing sizes.

2007-06-27  Lapo Calamandrei <calamandrei@gmail.com>

	* */embelms/embelm-system.* : new icons.	
	* */emblems/emblem-{readonly,unreadable}.* : new emblems similar to
		emblem-symbolic-link (8x8 included).
	* */categories/preferences-system-network.* : new icon.
	* {16x16,22x22}/emblems/emblem-documents.* : new icons inspired by