@@ -11,7 +11,6 @@
 [type: gettext/ini] 48x48/emblems/emblem-danger.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-desktop.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-distinguished.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-documents.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-draft.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-handshake.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-marketing.icon.in
@@ -34,6 +33,7 @@
 [type: gettext/ini] scalable/emblems/emblem-cvs-added.icon.in
 [type: gettext/ini] scalable/emblems/emblem-cvs-conflict.icon.in
 [type: gettext/ini] scalable/emblems/emblem-cvs-removed.icon.in
+[type: gettext/ini] scalable/emblems/emblem-documents.icon.in
 [type: gettext/ini] scalable/emblems/emblem-downloads.icon.in
 [type: gettext/ini] scalable/emblems/emblem-favorite.icon.in
 [type: gettext/ini] scalable/emblems/emblem-generic.icon.in
