@@ -1,3 +1,8 @@
+2007-07-05  Luca Ferretti  <elle.uca@libero.it>
+
+	* POTFILES.in: Updated to reflect changes for
+	desktop.icon location.
+
 2007-07-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation.
